# google_suport

./: Dockerfile  Makefile  README.md  main.py  pyproject.toml
src/adapters/repositories/operation_log/: firestore.py  ports.py
src/configs/: repositories.py
src/entrypoints/http/: router.py  server.py
src/entrypoints/http/handlers/: internal_base_handler.py
src/entrypoints/http/handlers/internal/: __init__.py  operation_log.py
src/exceptions/: operation_log.py
src/factories/: operation_log.py
src/models/: operation_log.py
src/models/pubsub/: pubsub_message.py  side_effect_messages.py
src/services/internal/commands/: operation_log.py
src/services/internal/handlers/: operation_log.py
tests/: conftest.py
tests/e2e/: conftest.py
tests/e2e/internal/: test_operation_log.py
tests/integration/adapters/repositories/operation_log/: test_firestore.py
tests/unit/factories/: test_operation_log.py
tests/unit/services/: fakes.py
tests/unit/services/internal/: test_operation_log.py
